# tothlilla

./: .gitignore  README.md
demos/DEMO_WEEK_02/: Lillas second week.ppt
demos/DEMO_WEEK_04/: Lillas fourth week.ppt
demos/DEMO_WEEK_06/: Lillas_sixth_week.ppt
google_test_practice/: doubleNum.cpp  doubleNum.h  test.cpp  try_linking.cpp
mysql_practice/: todo_database.sql
opencv_practice/: drawing_things.cpp  image_blend.cpp  image_brightness.cpp  image_contrast.cpp  image_to_gray.cpp  main.cpp  practiceWeekHeader.cpp  practiceWeekHeader.h
week-01/day-3/Ex_01_HelloLilla/: CMakeLists.txt  main.cpp
week-01/day-3/Ex_02_Riddle/: CMakeLists.txt
week-01/day-3/Ex_04_Introduce/: CMakeLists.txt
week-01/day-3/Ex_05_TWoNumb/: CMakeLists.txt  main.cpp
week-01/day-3/Ex_07_FavNumb/: main.cpp
week-01/day-3/Ex_08_swap/: main.cpp
week-01/day-3/Ex_09_BMI/: CMakeLists.txt
week-01/day-3/Ex_10_Basicinf/: CMakeLists.txt  main.cpp
week-02/VideoPractice1_StringFunc/: CMakeLists.txt  main.cpp
week-04/day-3/Ex_01_InstruStringedInstru/: CMakeLists.txt  bassguitar.cpp  bassguitar.h  electricguitar.cpp  electricguitar.h  instrument.cpp  instrument.h  main.cpp  stringedinstrument.cpp  stringedinstrument.h  violin.cpp  violin.h
week-05/day-4/: copy.txt  usage.txt
week-08/function_templates_SKELETON/: external_button_init.c  external_led_init.c  important_BSP_functions.c  important_GPIO_functions.c  interruption_templates.c  interruption_templates.h  main.c  pwm_init.c  timer_init.c  uart_init.c  user_button_init.c
week-9/practice/: main.c
(+623 files in other folders)
