cmake_minimum_required(VERSION 3.13)
project(Ex_01_InstruStringedInstru)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ex_01_InstruStringedInstru main.cpp instrument.cpp instrument.h stringedinstrument.cpp stringedinstrument.h electricguitar.cpp electricguitar.h bassguitar.cpp bassguitar.h violin.cpp violin.h)